--- a/menu-seleçao/style.css
+++ b/menu-seleçao/style.css
@@ -8,11 +8,21 @@
 .quadrado{
     height: 50px;
     width: 250px;
-    margin: 100px;
+    margin: 100px 615px 100px;
     padding: 35px;
     border: 1px solid black;
     transition-duration: 0.5s;
-    display: block;
+    text-decoration: none;
+
+    
+}
+.quadrado2{
+    height: 50px;
+    width: 250px;
+    margin: -32px 615px 100px;
+    padding: 35px;
+    border: 1px solid black;
+    transition-duration: 0.5s;
     text-decoration: none;
 
     
@@ -22,6 +32,16 @@
     padding: 40px;
     box-shadow: -11px 10px 0px black;
 
+}
+.quadrado2:hover{
+    
+    padding: 40px;
+    box-shadow: -11px 10px 0px black;
+
+}
+
+header > h1{
+    text-align: center;
 }
 
 nav > a{
@@ -35,21 +55,39 @@ nav > a{
     
 }
 
-#p1{
-    margin: -25px -18px 0px;
-    padding: 0px 0px 8px;
+.quadrado2 > a{
+    color: black;
     text-decoration: none;
+    
+}
+
+
+#p1{
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    
+
+}
+#p2{
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
     
 
 }
 
-#p2{
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    margin: 0px -18px 0px;
-    padding: 10px 0px 0px;
+div.quadrado > img{
+    
+    padding: 0px 0px 0px;
+    margin: -89px -17px -7px;
+    height: 95px;
+    width: 93px;
 }
-
- 
-
+div.quadrado2 > img{
+    
+    padding: 0px 0px 0px;
+    margin: -89px -17px -7px;
+    height: 95px;
+    width: 93px;
+}
