--- a/menu-seleçao/style.css
+++ b/menu-seleçao/style.css
@@ -4,11 +4,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+main{
+    min-height: 493px;
+    max-height: 800px;
+    min-width: 510px;
+    max-width: 800px;
+    margin: auto;
+    
+}
 
-.quadrado{
-    height: 50px;
-    width: 250px;
-    margin: 100px 615px 100px;
+main .quadrado{
+    margin: 19px 238px 10px;
     padding: 35px;
     border: 1px solid black;
     transition-duration: 0.5s;
@@ -16,10 +22,8 @@
 
     
 }
-.quadrado2{
-    height: 50px;
-    width: 250px;
-    margin: -32px 615px 100px;
+main .quadrado2{
+    margin: 19px 238px 10px;
     padding: 35px;
     border: 1px solid black;
     transition-duration: 0.5s;
