--- a/menu-seleçao/style.css
+++ b/menu-seleçao/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
 *{
+    padding: 0px;
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -21,8 +23,6 @@ header{
     transition-duration: 0.5s;
     text-decoration: none;
     
-    
-
     
 }
 
